@@ -1,5 +1,10 @@
 The following changes were made in 4.5.5 since 4.5.3 release:
 
+  * Quazy-leak patch: make memory detection tools happier, option _STLP_LEAKS_PEDANTIC in _site_config.h.
+                  (thanks Petr Ovchenkov)
+  
+  ----
+  
   * Support of the Linux Intel C++ support (thanks Blaine Kubesh)
   
   ----
